--- a/assets/styles.index.css
+++ b/assets/styles.index.css
@@ -18,11 +18,35 @@ body {
 }
 
 header {
-    background-color: rgb(10, 41, 151);
+    background-color: rgb(11, 70, 129);
     border-radius: 6px;
     height: 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#principal {
+
+    border-radius: 6px;
+    height: 800px;
+    margin: 10px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+main {
+    background-color: rgb(62, 0, 250);
+    border-radius: 6px;
+    height: 100%;
+    width: 74%;
+}
+
+aside {
+    background-color: blueviolet;
+    border-radius: 6px;
+    height: 100%;
+    width: 25%;
 }
