feat: add profile image

--- a/assets/styles.index.css
+++ b/assets/styles.index.css
@@ -22,10 +22,17 @@ header {
     border-radius: 6px;
     height: 150px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
 }
+
+#image-profile {
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+}
+
 
 #principal {
 
@@ -49,4 +56,25 @@ aside {
     border-radius: 6px;
     height: 100%;
     width: 25%;
+}
+
+footer {
+    background-color: black;
+    border-radius: 6px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+footer p {
+    color: rgb(5, 213, 245);
+    font-size: 1.2rem;
+}
+
+footer a {
+    color: rgb(8, 232, 248);
+    text-decoration: none;
+    font-weight: 500;
 }
